--- a/src/app/notice-edit/notice-edit.component.html
+++ b/src/app/notice-edit/notice-edit.component.html
@@ -4,6 +4,7 @@
       <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
     </div>
     <div class="button-row">
+      <a mat-flat-button color="primary" [routerLink]="['/notices']"><mat-icon>list</mat-icon></a>
       <a mat-flat-button color="primary" (click)="noticeDetails()"><mat-icon>info</mat-icon></a>
     </div>
     <mat-card class="example-card">
