--- a/src/app/notices/notices.component.html
+++ b/src/app/notices/notices.component.html
@@ -7,17 +7,25 @@
       <a mat-flat-button color="primary" [routerLink]="['/notice-add']"><mat-icon>add</mat-icon></a>
     </div>
     <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="data" class="example-table"
+      <table mat-table [dataSource]="dataSource" class="example-table"
              matSort matSortActive="title" matSortDisableClear matSortDirection="asc">
   
         <!-- Title Column -->
         <ng-container matColumnDef="title">
           <th mat-header-cell *matHeaderCellDef>Título</th>
-          <td mat-cell *matCellDef="let row">{{row.title}}</td>
+          <td mat-cell *matCellDef="let row" [routerLink]="['/notice-details/', row.id]">{{row.title}}</td>
+        </ng-container>
+        <ng-container matColumnDef="buttons">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let row">
+            <a mat-flat-button color="primary" (click)="editNoticeRoute(row.id)"><mat-icon>edit</mat-icon></a>
+            <a mat-flat-button color="warn" (click)="deleteNotice(row.id)"><mat-icon>delete</mat-icon></a>
+          </td>
         </ng-container>
   
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="['/notice-details/', row.id]"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     </div>
   </div>
