--- a/src/app/notices/notices.component.html
+++ b/src/app/notices/notices.component.html
@@ -7,13 +7,17 @@
       <a mat-flat-button color="primary" [routerLink]="['/notice-add']"><mat-icon>add</mat-icon></a>
     </div>
     <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" class="example-table"
+      <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="example-table"
              matSort matSortActive="title" matSortDisableClear matSortDirection="asc">
   
         <!-- Title Column -->
         <ng-container matColumnDef="title">
           <th mat-header-cell *matHeaderCellDef>Título</th>
-          <td mat-cell *matCellDef="let row" [routerLink]="['/notice-details/', row.id]">{{row.title}}</td>
+          <td mat-cell *matCellDef="let row"
+          [class.expanded-row]="expandedElement === row"
+          (click)="expandedElement = expandedElement === row ? null : row; viewNotice(row.id, row.visualizationDate, expandedElement === row)">
+            {{row.title}}
+          </td>
         </ng-container>
         <ng-container matColumnDef="buttons">
           <th mat-header-cell *matHeaderCellDef></th>
@@ -22,9 +26,27 @@
             <a mat-flat-button color="warn" (click)="deleteNotice(row.id)"><mat-icon>delete</mat-icon></a>
           </td>
         </ng-container>
+
+        <ng-container matColumnDef="expandedDetail">
+          <td mat-cell *matCellDef="let row" [attr.colspan]="displayedColumns.length">
+            <div class="element-detail"
+                 [@detailExpand]="row == expandedElement ? 'expanded' : 'collapsed'">
+      
+              <div class="element-description">
+                <span>{{row.description}}</span> 
+                <br/>
+                <br/>
+                <span>Data de publicação: {{row.publicationDate | date:'dd/MM/yyyy HH:mm:ss'}}</span>
+                <br/>
+                <span>Visualizado: <mat-icon>check_circle</mat-icon></span>
+              </div>
+            </div>
+          </td>
+        </ng-container>
   
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
       </table>
       <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     </div>
