--- a/src/app/notices/notices.component.scss
+++ b/src/app/notices/notices.component.scss
@@ -46,3 +46,29 @@
   .mat-flat-button {
     margin: 5px;
   }
+
+  tr.detail-row {
+    height: 0;
+  }
+  
+  tr.element-row:not(.expanded-row):hover {
+    background: whitesmoke;
+  }
+  
+  tr.element-row:not(.expanded-row):active {
+    background: #efefef;
+  }
+  
+  .element-row td {
+    border-bottom-width: 0;
+  }
+  
+  .element-detail {
+    overflow: hidden;
+    display: flex;
+    background: rgb(129, 124, 124);
+  }
+  
+  .element-description {
+    padding: 16px;
+  }
